--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
                     <label for="message">Message :</label>
                     <br>
                     <textarea id="message" name="message" rows="6" cols="60"></textarea><br>
-                    <button type="submit"><a href="mailto:votreadresse@mail.fr">Envoyez le message</a></button>
+                    <button type="submit"><a href="mailto:lucas.lipari@epitech.eu">Envoyez le message</a></button>
                 </form>
             </div>
         </div>
